package Facade.Message;

/**
 * Instances of this class encapsulate the messge body for an e-mail message.
 */
class MessageBody {
    /**
     * Constructor
     * @param body the content of the message body
     */
    MessageBody(RichText body) {
        //...
    } // Constructor(RichText)

    /**
     * Add an attachment to this message body.
     * @param attachment The object to add to this message.
     */
    void addAttachment(Attachment attachment) {
        //...
    } // addAttachment(Attachment)
} // class MessageBody

