package Facade.Message;

import java.util.Hashtable;

/**
 * Instances of this class encapsulate header information.
 */
class MessageHeader {
    /**
     * constructor
     * @param fields A Hashtable that contains the field values for this
     *               header.
     */
    MessageHeader(Hashtable<String, String> fields) {
        //...
    } // constructor(Hashtable)
    //...
} // class MessageHeader
